k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shareify-api-gateway
  labels:
    app: shareify-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shareify-api-gateway
  template:
    metadata:
      labels:
        app: shareify-api-gateway
    spec:
      containers:
        - name: api-gateway
          image: mvnsakash/shareify-api-gateway:v1.1.2
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: shareify-api-gateway
  labels:
    app: shareify-api-gateway
spec:
  type: NodePort
  selector:
    app: shareify-api-gateway
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
