k8s/frontend-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shareify-frontend
  labels:
    app: shareify-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shareify-frontend
  template:
    metadata:
      labels:
        app: shareify-frontend
    spec:
      containers:
        - name: frontend
          image: shareify/shareify-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shareify-frontend
  labels:
    app: shareify-frontend
spec:
  type: NodePort
  selector:
    app: shareify-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
      protocol: TCP
