k8s/item-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shareify-item-service
  labels:
    app: shareify-item-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shareify-item-service
  template:
    metadata:
      labels:
        app: shareify-item-service
    spec:
      containers:
        - name: item-service
          image: mvnsakash/item-service:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: shareify-item-service
  labels:
    app: shareify-item-service
spec:
  type: ClusterIP
  selector:
    app: shareify-item-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
