k8s/notification-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shareify-notification-service
  labels:
    app: shareify-notification-service
spec:
  serviceName: "shareify-notification-service"
  replicas: 1
  selector:
    matchLabels:
      app: shareify-notification-service
  template:
    metadata:
      labels:
        app: shareify-notification-service
    spec:
      containers:
        - name: notification-service
          image: mvnsakash/shareify-notification-service:v1.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "csi-standard"
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: shareify-notification-service
  labels:
    app: shareify-notification-service
spec:
  type: ClusterIP
  selector:
    app: shareify-notification-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
